# rpg_tools

./: Cargo.toml
.github/workflows/: main.yml
resources/settings/CoC/: building.yaml  character.yaml  culture.yaml  mountain.yaml  river.yaml  street.yaml  town.yaml
resources/templates/: base.html.tera  home.html.tera  mountain.html.tera
resources/templates/generic/: all.html.tera
resources/templates/mountain/: details.html.tera  edit.html.tera
resources/templates/river/: details.html.tera  edit.html.tera
resources/templates/street/: details.html.tera  edit.html.tera
resources/templates/town/: details.html.tera  edit.html.tera
rpg_tools_core/: Cargo.toml
rpg_tools_core/src/: lib.rs
rpg_tools_core/src/model/: color.rs  mod.rs  name.rs
rpg_tools_core/src/usecase/: mod.rs
rpg_tools_core/src/utils/: io.rs  mod.rs  storage.rs
rpg_tools_editor/: Cargo.toml
rpg_tools_editor/src/: html.rs  init.rs  main.rs  svg.rs
rpg_tools_editor/src/html/: form.rs  mod.rs
rpg_tools_editor/src/route/: mod.rs  mountain.rs  river.rs  street.rs  town.rs  util.rs
rpg_tools_editor/src/route/building/: mod.rs
rpg_tools_editor/src/route/character/: culture.rs  mod.rs
rpg_tools_editor/src/route/town/: building.rs  mod.rs  street.rs  terrain.rs  tile.rs
rpg_tools_editor/static/: scripts.js  style.css
rpg_tools_html/: Cargo.toml
rpg_tools_html/src/: form.rs  lib.rs
rpg_tools_rendering/: Cargo.toml
rpg_tools_rendering/examples/: svg.rs  town.rs
rpg_tools_rendering/src/: lib.rs
rpg_tools_rendering/src/renderer/: mod.rs  style.rs
(+52 files in other folders)
