[package]
name = "rpg_tools_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
rocket = "0.5.0"
rpg_tools_core = { path = "../rpg_tools_core" }
rpg_tools_html = { path = "../rpg_tools_html" }
rpg_tools_rendering = { path = "../rpg_tools_rendering" }
log = "0.4.20"
